# AirDefenceSimulation

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  fly.toml  render.yaml
backend/: pyproject.toml
backend/app/: guidance.py  main.py  models.py  physics.py  settings.py  sim_engine.py  tracker.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/audio/: collision-blast.m4a  hypersonic-missile-launch.webm  missile-launch.m4a
frontend/public/models/: missile_battery.glb
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: ControlPanel.tsx  CoverHero.tsx  PingCard.tsx  ResultsPanel.tsx  SimulationCanvas.tsx  TelemetryPanel.tsx
frontend/src/sim/: Scene.ts  ThreeTacticalScene.tsx
